fix: remove visibility in modal text

--- a/css/services.css
+++ b/css/services.css
@@ -204,13 +204,16 @@
   flex-direction: column;
   padding-inline: 28px;
   padding-top: 40px;
-  opacity: 0;
-  transition: opacity 0.3s ease;
+  visibility: hidden;
+  transition:
+    opacity 0.5s ease-in-out,
+    visibility 0.5s;
 }
 
 .services__container__modal.modal-ready
   .services__container__modal__content__box__package {
   opacity: 1;
+  visibility: visible;
 }
 
 .services__container__modal__content__box__package * {
